<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".RegistrationActivity">

    <include
        android:id="@+id/Head"
        layout="@layout/activity_mainheader" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Head"
        android:layout_marginBottom="10dp"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:padding="20dp"
                android:src="@drawable/logo_new" />


            <LinearLayout
                android:id="@+id/RL_RegisterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_border"
                android:elevation="15dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="40dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_back"
                    android:hint="@string/gmail_com"

                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/referral_code"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_RegRefCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_ReferralCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/edittext_back"
                        android:hint="@string/referral_code_optional"

                        android:maxLength="50"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/name"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_name"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_back"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefg
hijklmnopqrstuvwxyz"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"

                    android:maxLength="50"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_back"
                    android:hint="No Spam.We Promise"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Mobile."
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_MobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_back"
                    android:hint="@string/no_spam_we_promise"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Password."
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_back"
                    android:hint="@string/minimum_8_characters_with_1_number_symbol"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_RegNext"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/input_RegPassword"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gredient_bt"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="NEXT"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/RL_RegisterLayout"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:id="@+id/socialLoginContainer"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/Rl_Facebook"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/facebook_drawable"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        />
                    <ImageView
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/facebook"
                        android:layout_toStartOf="@id/btnfacebook"
                        android:layout_centerVertical="true"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>
                    <TextView
                        android:id="@+id/btnfacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/facebook"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/RL_Google"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    android:background="@drawable/btn_background_red"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_button"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/googleplus"
                        android:layout_toStartOf="@id/tv_google"
                        android:layout_centerVertical="true"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>
                    <TextView
                        android:id="@+id/tv_google"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/google"
                        android:textColor="@color/white" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/socialLoginContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_registering_i_agree_to_all_rounder"
                    android:textColor="#858585"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_TearmsandConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_amp_c"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/terms"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/LL_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_a_user"
                        android:textColor="#858585"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/log_in"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
