<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/head"
        layout="@layout/activity_mainheader" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/amount_to_be_added"
                android:textColor="@color/eightE"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_PaymentFinalAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_amount"
                android:textAlignment="center"
                android:inputType="number"
                android:digits="1234567890"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="#1e1e1e"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/eightE" />

            <RelativeLayout
                android:id="@+id/RL_TrakNPayPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/im_TraknPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableTint="@color/colorPrimary"
                    android:src="@drawable/wallet1_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/im_arrow3"
                    android:layout_toRightOf="@+id/im_TraknPay"
                    android:padding="10dp"
                    android:text="@string/payu_payment"
                    android:textColor="#1e1e1e"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/im_arrow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/arrow_icon_pay" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dbdbdb" />
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/showprogress"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
</RelativeLayout>
